The models were completed. ModelAdmin,  index.html, course.html added. Subject and course views in the process

--- a/upskill/templates/upskill/index.html
+++ b/upskill/templates/upskill/index.html
@@ -64,7 +64,7 @@
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <a href="index.html" class="navbar-brand ml-lg-3">
+            <a href="{% url 'upskill:index' %}" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-book-reader mr-3"></i>Edukate</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -77,13 +77,13 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Subjects</a>
                         <div class="dropdown-menu m-0">
-                            <a href="detail.html" class="dropdown-item">Web Design</a>
-                            <a href="feature.html" class="dropdown-item">Frontend</a>
-                            <a href="team.html" class="dropdown-item">Backend</a>
-                            <a href="testimonial.html" class="dropdown-item">AI</a>
+                            <a href="course.html" class="dropdown-item">Web Design</a>
+                            <a href="course.html" class="dropdown-item">Frontend</a>
+                            <a href="course.html" class="dropdown-item">Backend</a>
+                            <a href="course.html" class="dropdown-item">AI</a>
                         </div>
                     </div>
-                    <a href="course.html" class="nav-item nav-link">Courses</a>
+                    <a href="{% url 'upskill:course' %}" class="nav-item nav-link">Courses</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu m-0">
