--- a/upskill/templates/upskill/course.html
+++ b/upskill/templates/upskill/course.html
@@ -138,13 +138,13 @@
             <div class="row">
                 {% for course in courses %}
                 <div class="col-lg-4 col-md-6 pb-4">
-                    <a class="courses-list-item position-relative d-block overflow-hidden mb-2" href="detail.html">
-                        <img class="img-fluid" src="{{ course.image }}" alt="">
+                    <a class="courses-list-item position-relative d-block overflow-hidden mb-2" href="{% url 'upskill:detail' course.slug %}">
+                        <img class="img-fluid" src="{{ course.get_image_url }}" alt="">
                         <div class="courses-text">
                             <h4 class="text-center text-white px-3">{{ course.title }}</h4>
                             <div class="border-top w-100 mt-3">
                                 <div class="d-flex justify-content-between p-4">
-                                    <span class="text-white"><i class="fa fa-user mr-2"></i>{{ course.title }}</span>
+                                    <span class="text-white"><i class="fa fa-user mr-2"></i>{{ course.owner.full_name|default:"Noma'lum" }}</span>
                                     {% comment %} <span class="text-white"><i class="fa fa-star mr-2"></i>4.5
                                         <small>(250)</small></span> {% endcomment %}
                                 </div>
